# drone_synth

./: .gitmodules  CMakeLists.txt
.github/workflows/: build-windows.yml  build_win_main.yml  build_windows_vst3.yml  main.yml  new.yml  new_main.yml  new_vst_main.yml
Source/: PluginEditor.cpp
drone/: CMakeLists.txt  settings.json
drone/.github/workflows/: build_windows_vst3.yml  windows-build.yml
drone/Source/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
